syntax = "proto3";
package subnet_dpn.session;

message ProtoSession {
    string provider_addr = 1;
    string client_addr = 2;
    string client_identifier = 3;
    int64 handshaked_at = 4;
}
